# tddCppSkeleton

./: CMakeLists.txt  README.md  TODO.txt
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
tests/: CMakeLists.txt  CalculatorTest.cpp  allTests.cpp
